--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,6 @@ jobs:
     service_connection_github: $(Endjin_Service_Connection_GitHub)
     solution_to_build: $(Endjin_Solution_To_Build)
     netSdkVersion: '7.x'
+    additionalNetSdkVersions:
+    - '6.x'
     includeNetSdkPreviewVersions: 'true'
