--- a/Solutions/Corvus.UriTemplates.Resolvers.Json/Corvus.UriTemplates.Resolvers.Json.csproj
+++ b/Solutions/Corvus.UriTemplates.Resolvers.Json/Corvus.UriTemplates.Resolvers.Json.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
@@ -9,7 +9,7 @@
 
 	<PropertyGroup>
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-		<Description>Low allocation implementation of URI template functions conforming to http://tools.ietf.org/html/rfc6570.</Description>
+		<Description>JSON parameter provider for a low allocation implementation of URI template functions conforming to http://tools.ietf.org/html/rfc6570.</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -21,6 +21,11 @@
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
 		<PackageReference Include="System.Collections.Immutable" Version="7.0.0-rc.1.22426.10" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0-rc.1.22427.2" />
+		<PackageReference Include="System.Text.Json" Version="7.0.0-rc.1.22426.10" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Corvus.UriTemplates\Corvus.UriTemplates.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
