--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,4 @@ jobs:
     additionalNetSdkVersions:
     - '7.x'
     includeNetSdkPreviewVersions: 'true'
+    analysisOutputSasToken: $(Endjin_AnalysisOutput_SASToken)
