Enable SBOM publishing as part of CI build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,4 @@ jobs:
     additionalNetSdkVersions:
     - '7.x'
     includeNetSdkPreviewVersions: 'true'
-    analysisOutputSasToken: $(Endjin_AnalysisOutput_SASToken)
+    compileTasksServiceConnection: endjin-acr-reader
