Added code to validate query parameter partial resolution with multivariable parameters.

--- a/Solutions/Sandbox/Sandbox.csproj
+++ b/Solutions/Sandbox/Sandbox.csproj
@@ -9,6 +9,10 @@
 	</PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Tavis.UriTemplates" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Corvus.UriTemplates.Resolvers.DictionaryOfObject\Corvus.UriTemplates.Resolvers.DictionaryOfObject.csproj" />
     <ProjectReference Include="..\Corvus.UriTemplates.Resolvers.Json\Corvus.UriTemplates.Resolvers.Json.csproj" />
     <ProjectReference Include="..\Corvus.UriTemplates\Corvus.UriTemplates.csproj" />
