--- a/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
+++ b/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
@@ -23,12 +23,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
-		<PackageReference Include="xunit" Version="2.5.2-pre.6" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.2-pre.10">
+		<PackageReference Include="xunit" Version="2.6.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="azurepipelines.testlogger" Version="1.2.2" />
+		<PackageReference Include="azurepipelines.testlogger" Version="1.2.3" />
 	</ItemGroup>
 
 	<ItemGroup>
