--- a/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
+++ b/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<IsPackable>false</IsPackable>
 
     <!--
@@ -22,13 +22,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
-		<PackageReference Include="xunit" Version="2.4.2" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
+		<PackageReference Include="xunit" Version="2.6.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="azurepipelines.testlogger" Version="1.2.2" />
+		<PackageReference Include="azurepipelines.testlogger" Version="1.2.3" />
 	</ItemGroup>
 
 	<ItemGroup>
