Added netstandard2.0 implementation. Replaced use of IBufferWriter with ValueStringBuilder.

--- a/Solutions/Corvus.UriTemplates/Corvus.UriTemplates.csproj
+++ b/Solutions/Corvus.UriTemplates/Corvus.UriTemplates.csproj
@@ -2,9 +2,13 @@
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<NoWarn>$(NoWarn);nullable</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -12,6 +16,10 @@
 		<Description>Low allocation implementation of URI template functions conforming to http://tools.ietf.org/html/rfc6570.</Description>
 	</PropertyGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<PackageReference Include="IndexRange" Version="1.0.3" />
+	</ItemGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
 		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.7">
@@ -24,7 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Update="Roslynator.Analyzers" Version="4.6.2" />
+		<PackageReference Update="Roslynator.Analyzers" Version="4.6.2" />
 	</ItemGroup>
 
 </Project>
