--- a/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
+++ b/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
@@ -1,18 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net481;net8.0</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 
-    <!--
+		<!--
     This project contains exact copies of specs from:
 			https://github.com/tavis-software/Tavis.UriTemplates/blob/master/src/UriTemplateTests/ParameterMatchingTests.cs
     (as permissible under the Apache license).
     That code does not conform to our coding style, so we need to disable a few warnings.
     (We also have a local .editorconfig, but not everything can be handled through that.)
     -->
-    <NoWarn>$(NoWarn);RCS1163;CA1825;IDE0017;IDE0059;IDE0062;IDE0090;IDE0220;IDE1006;xUnit1004</NoWarn>
+		<NoWarn>$(NoWarn);RCS1163;CA1825;IDE0017;IDE0059;IDE0062;IDE0090;IDE0220;IDE1006;xUnit1004</NoWarn>
 	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net481'">
+		<NoWarn>$(NoWarn);nullable</NoWarn>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net481'">
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="IndexRange" Version="1.0.3" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<EmbeddedResource Include="..\..\uritemplate-test\extended-tests.json" Link="extended-tests.json" />
@@ -25,8 +34,8 @@
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
 		<PackageReference Include="xunit" Version="2.6.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="azurepipelines.testlogger" Version="1.2.3" />
 	</ItemGroup>
