--- a/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
+++ b/Solutions/Corvus.UriTemplate.TavisApi.Tests/UriTemplateTests.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net481;net8.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
 		<IsPackable>false</IsPackable>
 
 		<!--
