--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,11 +56,7 @@ jobs:
     with:
       netSdkVersion: '8.0.x'
       # additionalNetSdkVersion: '7.0.x'
-      # workflow_dispatch inputs are always strings, the type property is just for the UI
-      # IDG temporary override because the workflow_dispatch button isn't yet available (because the
-      # workflow is not yet merged into main)
-      forcePublish: true
-      #forcePublish: ${{ github.event.inputs.forcePublish == 'true' }}
+      forcePublish: ${{ github.event.inputs.forcePublish == 'true' }}
       skipCleanup: ${{ github.event.inputs.skipCleanup == 'true' }}
       # testArtifactName: ''
       # testArtifactPath: ''
