--- a/Solutions/Corvus.UriTemplates.Resolvers.Json/Corvus.UriTemplates.Resolvers.Json.csproj
+++ b/Solutions/Corvus.UriTemplates.Resolvers.Json/Corvus.UriTemplates.Resolvers.Json.csproj
@@ -17,7 +17,7 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<Compile Remove="Corvus.Json\Internal\RuneNetStandard20.cs" />
+		<Compile Remove="Corvus.UriTemplates\RuneNetStandard20.cs" />
 	</ItemGroup>
 
 
